--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -84,3 +84,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.custom-container {
+    width: 100%;
+    max-width: 1200px; /* Maksimal kenglik */
+    margin-left: auto; /* O'ng va chap tomondan markazlash */
+    margin-right: auto;
+    padding-left: 15px; /* Ichki bo'shliq */
+    padding-right: 15px;
+}
