--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-container {
+    width: 100%;
+    max-width: 1200px; /* Maksimal kenglik */
+    margin-left: auto; /* O'ng va chap tomondan markazlash */
+    margin-right: auto;
+    padding-left: 15px; /* Ichki bo'shliq */
+    padding-right: 15px;
+}
