--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -72,10 +72,10 @@
   font-style: italic;
 }
 
-.ibm-plex-sans-light-italic {
+.ibm-plex-sans-light {
   font-family: "IBM Plex Sans", serif;
   font-weight: 300;
-  font-style: italic;
+  font-style: bold;
 }
 
 .ibm-plex-sans-regular {
