--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.custom-container {
+.custom- {
     width: 100%;
     max-width: 1200px; /* Maksimal kenglik */
     margin-left: auto; /* O'ng va chap tomondan markazlash */
@@ -11,96 +11,32 @@
     padding-right: 15px;
 }
 
-
-.bebas-neue-regular {
-  font-family: "Bebas Neue", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.ibm-plex-sans-thin {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 100;
-  font-style: normal;
-}
-
-.ibm-plex-sans-extralight {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 200;
-  font-style: normal;
-}
-
-.ibm-plex-sans-light {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.ibm-plex-sans-regular {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.ibm-plex-sans-medium {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.ibm-plex-sans-semibold {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.ibm-plex-sans-bold {
+.oswald {
   font-family: "IBM Plex Sans", serif;
   font-weight: 700;
   font-style: normal;
 }
 
-.ibm-plex-sans-thin-italic {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 100;
-  font-style: italic;
-}
-
-.ibm-plex-sans-extralight-italic {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 200;
-  font-style: italic;
-}
-
-.ibm-plex-sans-light {
-  font-family: "IBM Plex Sans", serif;
+@font-face {
+  font-family: 'Freestyle';
+  font-style:normal ;
   font-weight: 300;
+  src: local('Freestyle Script Regular'), url('./Fonts/FREESCPT.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'gilroy';
+  src: url('./Fonts/gilroy-bold.ttf') format('truetype');
+  font-weight: 400;
   font-style: bold;
 }
 
-.ibm-plex-sans-regular {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 500;
-  font-style: bold;
+.prise-img {
+  background-image: url(../assets/image/backgraundImg.svg);
+  background-color: #ED9EA1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.ibm-plex-sans-medium {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 500;
-  font-style: italic;
-}
-
-.ibm-plex-sans-semibold {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 600;
-  font-style: bold;
-  transform: scaleY(2);
-  /* transform: scaleX(02); */
-}
-
-.ibm-plex-sans-bold-italic {
-  font-family: "IBM Plex Sans", serif;
-  font-weight: 700;
-  font-style: italic;
-}
 
