detail and for you upgrade

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -39,4 +39,10 @@
   background-position: center;
 }
 
+.foryou-img {
+  background-image: url(https://ik.imagekit.io/vtroph5l9/Product/Layer%206%201.svg?updatedAt=1737187633852);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 
