--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .text-shadow-custom {
+    text-shadow: 0px 2.86px 2.86px rgba(0, 0, 0, 0.5);
+  }
+}
+
+.con{
+  width:1100px ;
+  margin: auto;
+}
 .custom- {
     width: 100%;
     max-width: 1200px; /* Maksimal kenglik */
